# NewMangosFour

./: CMakeLists.txt  How_To_Configure  README.md  Required_Commits.txt
cmake/: EnsureVersion.cmake  MangosParams.cmake  SetDefinitions.cmake
cmake/win/: VersionInfo.rc
contrib/: sync_mop_opcode_reference_status.ps1
contrib/convertConditions/: ConvertConditions.py
contrib/soap/: example.php
dep/loadlib/ml/: adt.cpp
dep/loadlib/sl/: adt.cpp  loadlib.cpp
linux/: getmangos.sh
src/: CMakeLists.txt
src/game/: CMakeLists.txt  pchdef.cpp  pchdef.h
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundDS.cpp  BattleGroundDS.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundIC.cpp  BattleGroundIC.h  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundMgrUtil.cpp  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundObjects.cpp  BattleGroundQueue.cpp  BattleGroundRB.cpp  BattleGroundRB.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundRV.cpp  BattleGroundRV.h  BattleGroundReward.cpp  BattleGroundSA.cpp  BattleGroundSA.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt
src/game/ChatCommands/: AHBotCommands.cpp  AccountCommands.cpp  AchievementCommands.cpp  AuctionHouseCommands.cpp  BanAndKickCommands.cpp  CastAndAuraCommands.cpp  CommunicationCommands.cpp  CreatureCommands.cpp  DebugCommands.cpp  EventCommands.cpp  GMCommands.cpp  GMTicketCommands.cpp  GameObjectCommands.cpp  GridCommands.cpp  GuildCommands.cpp  InstanceCommands.cpp  ListCommands.cpp  LookupCommands.cpp  MMapCommands.cpp  MailCommands.cpp  MiscellanousCommands.cpp  PlayerAndCreatureCommands.cpp  PlayerCommands.cpp  PlayerHonorCommands.cpp  PlayerLearnCommands.cpp  PlayerMiscCommands.cpp  PlayerStateCommands.cpp  PlayerStatsMods.cpp  PlayerTitleCommands.cpp  PoolCommands.cpp  QuestCommands.cpp  RACommands.cpp  ReloadCommands.cpp  ServerCommands.cpp  TeleportationAndPositionCommands.cpp  TriggerCommands.cpp  WaypointCommands.cpp  ZZZ_CustomCommands.cpp
src/game/Maps/: MapUpdater.cpp  MapUpdater.h
src/game/MotionGenerators/: ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  FleeingMovementGenerator.cpp  FleeingMovementGenerator.h  HomeMovementGenerator.cpp  HomeMovementGenerator.h  IdleMovementGenerator.cpp  IdleMovementGenerator.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.cpp  MovementGenerator.h  PathFinder.cpp  PathFinder.h  PointMovementGenerator.cpp  PointMovementGenerator.h  RandomMovementGenerator.cpp  RandomMovementGenerator.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h  WaypointSmoothing.cpp  WaypointSmoothing.h
src/game/Object/: AggressorAI.cpp  AggressorAI.h  ArenaTeam.h  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  Calendar.cpp  Calendar.h  Camera.cpp  Camera.h  CinematicFlyover.cpp  CinematicFlyover.h  CinematicFlyoverRoute.cpp  CinematicFlyoverRoute.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  CreatureEventAIMgr.h  CreatureLevel.cpp  CreatureMovement.cpp  CreatureSpellCooldown.cpp  CreatureVendorTrainer.cpp  CurrencyMgr.cpp  CurrencyMgr.h  DynamicObject.cpp  DynamicObject.h  Formulas.h  GMTicketMgr.cpp  (+167 more)
src/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPEP.cpp  OutdoorPvPEP.h  OutdoorPvPGH.cpp  OutdoorPvPGH.h  OutdoorPvPHP.cpp  OutdoorPvPHP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h  OutdoorPvPNA.cpp  OutdoorPvPNA.h  OutdoorPvPSI.cpp  OutdoorPvPSI.h  OutdoorPvPTF.cpp  OutdoorPvPTF.h  OutdoorPvPZM.cpp  OutdoorPvPZM.h
src/game/References/: FollowerRefManager.h  FollowerReference.cpp  FollowerReference.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h  HostileRefManager.cpp  MapRefManager.h  (+4 more)
src/game/Server/tests/: CMakeLists.txt  mop_account_data_lifecycle_source_test.cmake  mop_achievement_packets_test.cpp  mop_all_quests_completed_legacy_source_test.cmake  mop_arena_team_legacy_source_test.cmake  mop_auction_packets_source_test.cmake  mop_auction_packets_test.cpp  mop_aura_packets_source_test.cmake  mop_aura_packets_test.cpp  mop_auth_test.cpp  mop_battle_pet_packets_source_test.cmake  mop_battle_pet_packets_test.cpp  mop_battlefield_status_packets_source_test.cmake  mop_battlefield_status_packets_test.cpp  mop_battleground_timer_packets_source_test.cmake  mop_battleground_timer_packets_test.cpp  mop_calendar_packets_source_test.cmake  mop_calendar_packets_test.cpp  mop_channel_packets_source_test.cmake  mop_channel_packets_test.cpp  mop_character_customize_packets_source_test.cmake  mop_character_customize_packets_test.cpp  mop_charenum_test.cpp  mop_chat_packets_source_test.cmake  mop_chat_packets_test.cpp  mop_client_opcode_worklist_source_test.cmake  mop_client_opcode_worklist_test.cpp  mop_combat_log_packets_source_test.cmake  mop_combat_log_packets_test.cpp  mop_compact_packets_source_test.cmake  mop_compact_packets_test.cpp  mop_control_packets_test.cpp  mop_core_banner_source_test.cmake  mop_corpse_query_source_test.cmake  mop_corpse_query_test.cpp  mop_creategating_test.cpp  mop_creature_query_source_test.cmake  mop_creature_query_test.cpp  mop_currency_loot_legacy_source_test.cmake  mop_currency_packets_source_test.cmake  (+87 more)
src/genrev/: CMakeLists.txt
src/mangosd/: AFThread.cpp  AFThread.h  CMakeLists.txt  CliThread.cpp  CliThread.h  RAThread.cpp  RAThread.h  WorldThread.cpp  WorldThread.h  mangosd.conf.dist.in  mangosd.cpp
src/realmd/: CMakeLists.txt  Main.cpp
src/shared/: CMakeLists.txt  SystemConfig.h.in  revision_data.h.in
src/tools/: CMakeLists.txt
src/tools/Extractor_projects/loadlib/: CMakeLists.txt  adt.cpp  adt.h  loadlib.cpp  loadlib.h  mpq.cpp  mpq.h  wdt.cpp  wdt.h
(+446 files in other folders)
